## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall -I /usr/include/libxml2 \
	 -g -lxml2

bin_PROGRAMS = droidparser

droidparser_SOURCES = \
	bluetooth.c   \
	droidparser.c

droidparser_LDFLAGS = 

droidparser_LDADD = 

